# portfolio

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
backend/: Procfile  README.md  pyproject.toml
backend/src/portfolio_backend/: __init__.py  chat.py  config.py  main.py  security.py
frontend/: README.md  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
frontend/app/: layout.tsx  page.module.css  page.tsx
frontend/app/capsule-rsc/: page.tsx
frontend/components/: Chat.module.css  Chat.tsx  Layout.module.css  Layout.test.tsx  Layout.tsx
frontend/components/About/: About.module.css  About.test.tsx  About.tsx
frontend/components/CTA/: CTA.module.css  CTA.test.tsx  CTA.tsx
frontend/components/CapsuleRscDemo/: CapsuleRscDemo.module.css  CapsuleRscDemo.test.tsx  CapsuleRscDemo.tsx  index.ts
frontend/components/CapsuleRscDemo/CodeBlock/: CodeBlock.module.css  CodeBlock.test.tsx  CodeBlock.tsx
frontend/components/CapsuleRscDemo/RuntimeDemo/: RuntimeDemo.module.css  RuntimeDemo.test.tsx  (+2 more)
frontend/components/Hero/: BlobAnimation.test.tsx  BlobAnimation.tsx  Hero.module.css  Hero.test.tsx  Hero.tsx  MouseTracker.tsx
frontend/components/Projects/: ProjectCarousel.module.css  ProjectCarousel.tsx  Projects.module.css  Projects.tsx
frontend/data/: projects.ts
frontend/hooks/: useIntersectionObserver.test.ts  useIntersectionObserver.ts  useMousePosition.ts  useScrollAnimation.ts
frontend/lib/: websocket.ts
frontend/styles/: animations.css  globals.css
(+8 files in other folders)
